✅ fix(layout): fix the navbar bug by adding nav about and adjusting the gap

--- a/css/config.css
+++ b/css/config.css
@@ -66,7 +66,7 @@ body {
 .nav-links {
   display: flex;
   align-items: center;
-  gap: 25px;
+  gap: 20px;
   padding: 0;
   margin: 0;
   margin-left: 10px;
